tests/parse_print/random_perturb/enum_liberated/delete-04/stderr.expected
Error:
    tests/parse_print/random_perturb/enum_liberated/delete-04/delete-04.essence:4:10:
  |
4 | find x : E
  |          ^
Error: Symbol not found "E"
